--- a/public/style.css
+++ b/public/style.css
@@ -29,7 +29,7 @@ body {
   }
   
   input[type="url"] {
-    width: 100%;
+    width: 720px;
     padding: 0.75rem;
     background-color: #2c2c2c;
     border: 1px solid #00ffcc;
@@ -78,13 +78,39 @@ body {
   .link a {
     color: #00bfff;
     text-decoration: none;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    display: inline-block;
+    max-width: 100%; /*isso aqui meu amoigo, garante para nao ultrapassar a div bb*/
+    white-space: normal;
+  }
+
+  .dados-section h2 {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    display: inline-block;
+    max-width: 100%; /*isso aqui meu amoigo, garante para nao ultrapassar a div bb*/
+    white-space: normal;
   }
   
   .link a:hover {
     text-decoration: underline;
   }
   
+  .seletorDeSites {
+    width: 750px;
+    padding: 6px;
+    border-radius: 6px;
+    background-color: #111;
+    color: #00ffe1;
+    border: 1px solid #00ffe1;
+    font-family: monospace;
+  }
   
+  .dados-section h2 {
+    margin-top: 0.1px;
+  }
+
   footer {
     text-align: center;
     padding: 1rem;
